# database_concept

./: CMakeLists.txt  README.md  ex3.cpp  makefile
include/: Estate.hpp  Flat.hpp  House.hpp  Land.hpp  Owner.hpp  Property.hpp  database.hpp  database_concept.hpp  declaration.hpp  estate.hpp  estate_agency.hpp  house.hpp  owner.hpp
src/: Estate.cpp  Flat.cpp  House.cpp  Land.cpp  Owner.cpp  Property.cpp  database.cpp  estate.cpp  estate_agency.cpp  house.cpp  main.cpp  owner.cpp
test/: boost_test.cpp  ex3-test.cpp
test_materials_from_SA/: houses.txt  people.txt
